[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkano = { version = "0.34", features = ["macros"] }
vulkano-shaders = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-perfetto = { git = "https://github.com/LalitMaganti/tracing-perfetto.git" }
tracing-chrome = { git = "https://github.com/LalitMaganti/tracing-chrome.git" }
crossbeam-channel = "0.5"
bytemuck = { version = "1.0", features = ["derive"] }
winit = "0.28"
vulkano-win = "0.34"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "rust"
path = "main.rs"
